# linguistics

./: README.md  propLogic.cabal
.stack-work/install/x86_64-osx/lts-5.0/7.10.3/flag-cache/: propLogic-0.1.0.0-a148fd261eb32aa62f47efbc1c13ae85  propLogic-0.1.0.0-b4149b2c4283f1a973da63d096be6e34  propLogic-0.1.0.0-d18a10834528983faef8a933081dff11
.stack-work/install/x86_64-osx/lts-5.0/7.10.3/lib/x86_64-osx-ghc-7.10.3/propLogic-0.1.0.0-4ddIzV6SLah7ZLoNmVqeRv/: Definitions.dyn_hi  Definitions.hi
.stack-work/install/x86_64-osx/lts-5.0/7.10.3/lib/x86_64-osx-ghc-7.10.3/propLogic-0.1.0.0-6wzAtHaZZUO1hWwh5IS660/: Definitions.dyn_hi  Definitions.hi
.stack-work/install/x86_64-osx/lts-5.0/7.10.3/lib/x86_64-osx-ghc-7.10.3/propLogic-0.1.0.0-GXFnwXpsqZdIWA53NeoIZS/: Definitions.dyn_hi  Definitions.hi  libHSpropLogic-0.1.0.0-GXFnwXpsqZdIWA53NeoIZS-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-5.0/7.10.3/pkgdb/: package.cache  propLogic-0.1.0.0-6a2f61f52c29a8a433ea3828634ebd8d.conf  propLogic-0.1.0.0-a3fe906f133d08566b1d9ed0fcdda993.conf
app/: Main.hs
src/: Definitions.hs
